[gd_scene load_steps=16 format=3 uid="uid://kwr6dwirb8jd"]

[ext_resource type="Script" path="res://Synth_scene/Synth/Synth.gd" id="1_8dr87"]
[ext_resource type="PackedScene" uid="uid://pi7vexf72o6o" path="res://Synth_scene/Synth/SynthKey/synth_key.tscn" id="2_lqs5k"]
[ext_resource type="Texture2D" uid="uid://bvp0ebffdw5cb" path="res://Synth_scene/Synth/UI/grabber.png" id="3_px3va"]
[ext_resource type="Script" path="res://Synth_scene/Synth/Slider_filter.gd" id="4_ykmb3"]
[ext_resource type="Script" path="res://Synth_scene/Synth/Slider_attack.gd" id="6_v4q2j"]
[ext_resource type="Script" path="res://Synth_scene/Synth/Slider_decay.gd" id="7_4qnkk"]
[ext_resource type="Script" path="res://Synth_scene/Synth/Slider_sustain.gd" id="8_5dvic"]
[ext_resource type="Script" path="res://Synth_scene/Synth/Slider_release.gd" id="9_u5kst"]
[ext_resource type="Script" path="res://Synth_scene/Synth/Graph.gd" id="10_8bwu1"]
[ext_resource type="PackedScene" uid="uid://cm4g6avx25r34" path="res://Synth_scene/Synth/SynthKey/synth_key_black.tscn" id="10_i226n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vmwb6"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.329412, 0.329412, 0.329412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6r1qt"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_56rln"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jeija"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.8, 0.8, 0.796078)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_a611b"]
default_font_size = 20
Button/styles/disabled = SubResource("StyleBoxFlat_vmwb6")
Button/styles/focus = SubResource("StyleBoxFlat_6r1qt")
Button/styles/hover = SubResource("StyleBoxFlat_56rln")
Button/styles/normal = SubResource("StyleBoxFlat_56rln")
MarginContainer/constants/margin_bottom = 15
MarginContainer/constants/margin_left = 30
MarginContainer/constants/margin_right = 30
MarginContainer/constants/margin_top = 15
Panel/styles/panel = SubResource("StyleBoxFlat_jeija")

[node name="Synth" type="CanvasLayer"]
script = ExtResource("1_8dr87")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.137255, 0.137255, 0.137255, 1)

[node name="Ballon_container" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_top = 69.0
offset_right = 40.0
offset_bottom = 109.0
color = Color(1, 1, 1, 0)

[node name="Balloon1" type="Panel" parent="ColorRect/Ballon_container"]
layout_mode = 2
offset_left = 76.0
offset_top = 131.0
offset_right = 186.0
offset_bottom = 281.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_a611b")

[node name="Balloon2" type="Panel" parent="ColorRect/Ballon_container"]
layout_mode = 2
offset_left = 254.0
offset_top = 131.0
offset_right = 364.0
offset_bottom = 281.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_a611b")

[node name="Balloon3" type="Panel" parent="ColorRect/Ballon_container"]
layout_mode = 2
offset_left = 432.0
offset_top = 78.0
offset_right = 1073.0
offset_bottom = 281.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_a611b")

[node name="Balloon4" type="Panel" parent="ColorRect/Ballon_container"]
layout_mode = 0
offset_left = 76.0
offset_top = -46.0
offset_right = 1073.0
offset_bottom = 53.0
theme = SubResource("Theme_a611b")

[node name="Balloon5" type="Panel" parent="ColorRect/Ballon_container"]
layout_mode = 0
offset_left = 76.0
offset_top = 68.0
offset_right = 361.0
offset_bottom = 116.0
theme = SubResource("Theme_a611b")

[node name="Graph" type="Node2D" parent="ColorRect/Ballon_container" node_paths=PackedStringArray("keys", "synth")]
position = Vector2(0, -69)
script = ExtResource("10_8bwu1")
keys = [NodePath("../../MarginContainer/HBoxContainer/C4"), NodePath("../../MarginContainer/HBoxContainer/D4"), NodePath("../../MarginContainer/HBoxContainer/E4"), NodePath("../../MarginContainer/HBoxContainer/F4"), NodePath("../../MarginContainer/HBoxContainer/G4"), NodePath("../../MarginContainer/HBoxContainer/A4"), NodePath("../../MarginContainer/HBoxContainer/B4"), NodePath("../../MarginContainer/HBoxContainer/C5"), NodePath("../../MarginContainer/HBoxContainer/D5"), NodePath("../../MarginContainer/HBoxContainer/E5"), NodePath("../../MarginContainer/HBoxContainer/F5"), NodePath("../../MarginContainer/HBoxContainer/G5"), NodePath("../../MarginContainer/HBoxContainer/A5"), NodePath("../../MarginContainer/HBoxContainer/B5"), NodePath("../../../Black_key/C4#"), NodePath("../../../Black_key/D4#"), NodePath("../../../Black_key/F4#"), NodePath("../../../Black_key/G4#"), NodePath("../../../Black_key/A4#"), NodePath("../../../Black_key/C5#"), NodePath("../../../Black_key/D5#"), NodePath("../../../Black_key/F5#"), NodePath("../../../Black_key/G5#"), NodePath("../../../Black_key/A5#")]
synth = NodePath("../../..")
number_of_points = 9930
length_multiplier = 0.1
amplitude = 0.008

[node name="Oscilloscope" type="Line2D" parent="ColorRect/Ballon_container/Graph"]
position = Vector2(78, 72)
width = 3.0

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 0
offset_top = 323.0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 52
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="C4" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_lqs5k")]
layout_mode = 2
synth = NodePath("../../../..")

[node name="D4" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_lqs5k")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 146.83

[node name="E4" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_lqs5k")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 164.81

[node name="F4" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_lqs5k")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 174.61

[node name="G4" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_lqs5k")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 196.0

[node name="A4" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_lqs5k")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 220.0

[node name="B4" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_lqs5k")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 246.94

[node name="C5" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_lqs5k")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 261.63

[node name="D5" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_lqs5k")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 293.67

[node name="E5" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_lqs5k")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 329.63

[node name="F5" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_lqs5k")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 349.23

[node name="G5" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_lqs5k")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 392.0

[node name="A5" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_lqs5k")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 440.0

[node name="B5" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_lqs5k")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 493.88

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect"]
layout_mode = 0
offset_left = 355.0
offset_top = 35.0
offset_right = 1152.0
offset_bottom = 371.0
theme_override_constants/margin_left = 45
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 45
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer3" type="HBoxContainer" parent="ColorRect/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label_value_attack" type="Label" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
text = "0%"

[node name="Label_value_decay" type="Label" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
text = "0%"

[node name="Label_value_sustain" type="Label" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
text = "0%"

[node name="Label_value_release" type="Label" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
text = "0%"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="Slider_attack" type="VSlider" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer" node_paths=PackedStringArray("synth")]
layout_mode = 2
size_flags_horizontal = 6
focus_mode = 0
theme_override_icons/grabber = ExtResource("3_px3va")
theme_override_icons/grabber_highlight = ExtResource("3_px3va")
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.01
script = ExtResource("6_v4q2j")
synth = NodePath("../../../../..")

[node name="Slider_decay" type="VSlider" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer" node_paths=PackedStringArray("synth")]
layout_mode = 2
size_flags_horizontal = 6
focus_mode = 0
theme_override_icons/grabber = ExtResource("3_px3va")
theme_override_icons/grabber_highlight = ExtResource("3_px3va")
min_value = 0.01
max_value = 1.0
step = 0.01
value = 1.0
script = ExtResource("7_4qnkk")
synth = NodePath("../../../../..")

[node name="Slider_sustain" type="VSlider" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer" node_paths=PackedStringArray("synth")]
layout_mode = 2
size_flags_horizontal = 6
focus_mode = 0
theme_override_icons/grabber = ExtResource("3_px3va")
theme_override_icons/grabber_highlight = ExtResource("3_px3va")
min_value = 0.01
max_value = 1.0
step = 0.01
value = 1.0
script = ExtResource("8_5dvic")
synth = NodePath("../../../../..")

[node name="Slider_release" type="VSlider" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer" node_paths=PackedStringArray("synth")]
layout_mode = 2
size_flags_horizontal = 6
focus_mode = 0
theme_override_icons/grabber = ExtResource("3_px3va")
theme_override_icons/grabber_highlight = ExtResource("3_px3va")
min_value = 0.05
max_value = 1.0
step = 0.01
value = 0.05
script = ExtResource("9_u5kst")
synth = NodePath("../../../../..")

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label_attack" type="Label" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
text = "Attack"

[node name="Label_decay" type="Label" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
text = "Decay"

[node name="Label_sustain" type="Label" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
text = "Sustain"

[node name="Label_release" type="Label" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
text = "Release"

[node name="Left_wood" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_right = 53.0
offset_bottom = 647.0
color = Color(0.34902, 0.258824, 0.117647, 1)

[node name="Right_wood" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 1099.0
offset_right = 1152.0
offset_bottom = 647.0
color = Color(0.34902, 0.258824, 0.117647, 1)

[node name="MarginContainer3" type="MarginContainer" parent="ColorRect"]
layout_mode = 0
offset_left = 44.0
offset_top = 205.0
offset_right = 396.0
offset_bottom = 341.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer3"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer3" type="HBoxContainer" parent="ColorRect/MarginContainer3/VBoxContainer"]
layout_mode = 2

[node name="Label_type_wave" type="Label" parent="ColorRect/MarginContainer3/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1

[node name="Label_valule_filter" type="Label" parent="ColorRect/MarginContainer3/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
text = "0%"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer3/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_vertical = 3

[node name="Slider_wave" type="VSlider" parent="ColorRect/MarginContainer3/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
focus_mode = 0
theme_override_icons/grabber = ExtResource("3_px3va")
theme_override_icons/grabber_highlight = ExtResource("3_px3va")
max_value = 3.0

[node name="Slider_filter" type="VSlider" parent="ColorRect/MarginContainer3/VBoxContainer/HBoxContainer" node_paths=PackedStringArray("synth")]
layout_mode = 2
size_flags_horizontal = 6
focus_mode = 0
theme_override_icons/grabber = ExtResource("3_px3va")
theme_override_icons/grabber_highlight = ExtResource("3_px3va")
min_value = 100.0
max_value = 10000.0
step = 100.0
value = 500.0
script = ExtResource("4_ykmb3")
synth = NodePath("../../../../..")

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/MarginContainer3/VBoxContainer"]
layout_mode = 2

[node name="Label_wave" type="Label" parent="ColorRect/MarginContainer3/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
text = "Wave
"

[node name="Label_filter" type="Label" parent="ColorRect/MarginContainer3/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
text = "Filter"

[node name="MarginContainer4" type="MarginContainer" parent="ColorRect"]
layout_mode = 0
offset_left = 53.0
offset_top = 122.0
offset_right = 432.0
offset_bottom = 200.0
theme_override_constants/margin_left = 55
theme_override_constants/margin_right = 40

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer4"]
layout_mode = 2

[node name="Name_frequency" type="Label" parent="ColorRect/MarginContainer4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Frequency:"

[node name="Value_frequency" type="Label" parent="ColorRect/MarginContainer4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="Black_key" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 37.0
offset_right = 40.0
offset_bottom = 77.0

[node name="C4#" parent="Black_key" node_paths=PackedStringArray("synth") instance=ExtResource("10_i226n")]
layout_mode = 1
anchors_preset = -1
anchor_left = 2.725
anchor_top = 8.45
anchor_right = 3.875
anchor_bottom = 12.675
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
synth = NodePath("../..")
metadata/_edit_use_anchors_ = true

[node name="D4#" parent="Black_key" node_paths=PackedStringArray("synth") instance=ExtResource("10_i226n")]
layout_mode = 1
anchors_preset = -1
anchor_left = 4.525
anchor_top = 8.45
anchor_right = 5.675
anchor_bottom = 12.675
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
synth = NodePath("../..")
frequency = 155.56
metadata/_edit_use_anchors_ = true

[node name="F4#" parent="Black_key" node_paths=PackedStringArray("synth") instance=ExtResource("10_i226n")]
layout_mode = 1
anchors_preset = -1
anchor_left = 8.275
anchor_top = 8.45
anchor_right = 9.425
anchor_bottom = 12.675
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
synth = NodePath("../..")
frequency = 185.0
metadata/_edit_use_anchors_ = true

[node name="G4#" parent="Black_key" node_paths=PackedStringArray("synth") instance=ExtResource("10_i226n")]
layout_mode = 1
anchors_preset = -1
anchor_left = 10.125
anchor_top = 8.45
anchor_right = 11.275
anchor_bottom = 12.675
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
synth = NodePath("../..")
frequency = 207.65
metadata/_edit_use_anchors_ = true

[node name="A4#" parent="Black_key" node_paths=PackedStringArray("synth") instance=ExtResource("10_i226n")]
layout_mode = 1
anchors_preset = -1
anchor_left = 11.975
anchor_top = 8.45
anchor_right = 13.125
anchor_bottom = 12.675
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
synth = NodePath("../..")
frequency = 233.08
metadata/_edit_use_anchors_ = true

[node name="C5#" parent="Black_key" node_paths=PackedStringArray("synth") instance=ExtResource("10_i226n")]
layout_mode = 1
anchors_preset = -1
anchor_left = 15.675
anchor_top = 8.45
anchor_right = 16.825
anchor_bottom = 12.675
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
synth = NodePath("../..")
frequency = 275.18
metadata/_edit_use_anchors_ = true

[node name="D5#" parent="Black_key" node_paths=PackedStringArray("synth") instance=ExtResource("10_i226n")]
layout_mode = 1
anchors_preset = -1
anchor_left = 17.525
anchor_top = 8.45
anchor_right = 18.675
anchor_bottom = 12.675
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
synth = NodePath("../..")
frequency = 311.13
metadata/_edit_use_anchors_ = true

[node name="F5#" parent="Black_key" node_paths=PackedStringArray("synth") instance=ExtResource("10_i226n")]
layout_mode = 1
anchors_preset = -1
anchor_left = 21.225
anchor_top = 8.45
anchor_right = 22.375
anchor_bottom = 12.675
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
synth = NodePath("../..")
frequency = 369.99
metadata/_edit_use_anchors_ = true

[node name="G5#" parent="Black_key" node_paths=PackedStringArray("synth") instance=ExtResource("10_i226n")]
layout_mode = 1
anchors_preset = -1
anchor_left = 23.075
anchor_top = 8.45
anchor_right = 24.225
anchor_bottom = 12.675
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
synth = NodePath("../..")
frequency = 415.3
metadata/_edit_use_anchors_ = true

[node name="A5#" parent="Black_key" node_paths=PackedStringArray("synth") instance=ExtResource("10_i226n")]
layout_mode = 1
anchors_preset = -1
anchor_left = 24.925
anchor_top = 8.45
anchor_right = 26.075
anchor_bottom = 12.675
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
synth = NodePath("../..")
frequency = 466.16
metadata/_edit_use_anchors_ = true

[node name="Hide_wave" type="ColorRect" parent="."]
visible = false
offset_left = 67.0
offset_top = 196.0
offset_right = 198.0
offset_bottom = 358.0
color = Color(0.137255, 0.137255, 0.137255, 1)

[node name="Hide_filter" type="ColorRect" parent="."]
visible = false
offset_left = 236.0
offset_top = 196.0
offset_right = 367.0
offset_bottom = 356.0
color = Color(0.137255, 0.137255, 0.137255, 1)

[node name="Hide_dsr" type="ColorRect" parent="."]
visible = false
offset_left = 564.0
offset_top = 160.0
offset_right = 1052.0
offset_bottom = 343.0
color = Color(0.137255, 0.137255, 0.137255, 1)

[node name="Hide_asr" type="ColorRect" parent="."]
visible = false
offset_left = 735.0
offset_top = 159.0
offset_right = 1052.0
offset_bottom = 341.0
color = Color(0.137255, 0.137255, 0.137255, 1)

[node name="Hide_asr1" type="ColorRect" parent="Hide_asr"]
layout_mode = 0
offset_left = -290.0
offset_top = 2.0
offset_right = -174.0
offset_bottom = 177.0
color = Color(0.137255, 0.137255, 0.137255, 1)

[node name="Hide_adr" type="ColorRect" parent="."]
visible = false
offset_left = 454.0
offset_top = 157.0
offset_right = 771.0
offset_bottom = 340.0
color = Color(0.137255, 0.137255, 0.137255, 1)

[node name="Hide_adr1" type="ColorRect" parent="Hide_adr"]
layout_mode = 0
offset_left = 487.0
offset_top = 2.0
offset_right = 603.0
offset_bottom = 181.0
color = Color(0.137255, 0.137255, 0.137255, 1)

[node name="Hide_ads" type="ColorRect" parent="."]
visible = false
offset_left = 444.0
offset_top = 158.0
offset_right = 932.0
offset_bottom = 345.0
color = Color(0.137255, 0.137255, 0.137255, 1)

[node name="Hide_adsr" type="ColorRect" parent="."]
visible = false
offset_left = 425.0
offset_top = 137.0
offset_right = 1078.0
offset_bottom = 364.0
color = Color(0.137255, 0.137255, 0.137255, 1)

[node name="Hide_osciloscope" type="ColorRect" parent="."]
visible = false
offset_left = 76.0
offset_top = 19.0
offset_right = 1079.0
offset_bottom = 127.0
color = Color(0.137255, 0.137255, 0.137255, 1)

[connection signal="value_changed" from="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer/Slider_attack" to="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer/Slider_attack" method="_on_value_changed_attack"]
[connection signal="value_changed" from="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer/Slider_decay" to="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer/Slider_decay" method="_on_value_changed"]
[connection signal="value_changed" from="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer/Slider_sustain" to="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer/Slider_sustain" method="_on_value_changed"]
[connection signal="value_changed" from="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer/Slider_release" to="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer/Slider_release" method="_on_value_changed"]
[connection signal="value_changed" from="ColorRect/MarginContainer3/VBoxContainer/HBoxContainer/Slider_wave" to="." method="_on_wave_type_value_changed"]
[connection signal="value_changed" from="ColorRect/MarginContainer3/VBoxContainer/HBoxContainer/Slider_wave" to="ColorRect/Ballon_container/Graph" method="_on_slider_wave_value_changed"]
[connection signal="value_changed" from="ColorRect/MarginContainer3/VBoxContainer/HBoxContainer/Slider_filter" to="." method="_on_filter_value_changed"]
[connection signal="value_changed" from="ColorRect/MarginContainer3/VBoxContainer/HBoxContainer/Slider_filter" to="ColorRect/MarginContainer3/VBoxContainer/HBoxContainer/Slider_filter" method="_on_value_changed"]
